--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,19 +1,19 @@
 #edit-user-window.modal.hide.fade{ 'aria-hidden': 'true', role: 'dialog', tabindex: '-1' }
   .modal-dialog.modal-dialog-centered{ role: 'document' }
     .modal-content
-.main_nav_bar
-  #menu-overlay-btn.btn.btn-primary
-    = fa_icon 'navicon'
-    = link_to 'Edit user', edit_user_path(@user), { remote: true, 'data-toggle': 'modal', class: 'btn btn-primary',
-                                                            'data-target': '#edit-user-window', id: 'eul' }
-
-  - if request.referer && request.referer != request.original_url
-    = link_to request.referrer, id: 'log-overlay-btn', class: 'btn btn-primary' do
-      = fa_icon 'chevron-left'
-  - else
-    = link_to books_path, id: 'log-overlay-btn', class: 'btn btn-primary' do
-      = fa_icon 'chevron-left'
+#menu-overlay-btn.btn.btn-primary
+  = fa_icon 'navicon'
+- if request.referer && request.referer != request.original_url
+  = link_to request.referrer, id: 'log-overlay-btn', class: 'btn btn-primary' do
+    = fa_icon 'chevron-left'
+- else
+  = link_to books_path, id: 'log-overlay-btn', class: 'btn btn-primary' do
+    = fa_icon 'chevron-left'
 .page_content
+  #content_actions_container
+    = link_to edit_user_path(@user), { remote: true, 'data-toggle': 'modal',
+                                       'data-target': '#edit-user-window', id: 'eul' } do
+      = fa_icon 'cog 2x'
   .row.justify-content-center
     %div.img-thumbnail.mb-2
       - if @user.avatar?
